# golem-hackathon-17.03.25

./: .envrc  .gitignore  README.md  golem.yaml  notes.md
backend/apis/: chatroom.yaml
backend/components-rust/chatroom-inbox/src/: lib.rs
backend/components-rust/chatroom-inbox/wit/: chatroom-inbox.wit
backend/components-rust/chatroom-room/src/: lib.rs
backend/components-rust/chatroom-room/wit/: chatroom-room.wit
backend/golem-temp/client/chatroom_client/temp-build/wit/: client.wit
backend/golem-temp/client/chatroom_inbox/wit/: client.wit
backend/golem-temp/client/chatroom_room/temp-build/wit/: client.wit
backend/golem-temp/client/chatroom_room/wit/: client.wit
backend/golem-temp/components/: chatroom_client_debug.wasm  chatroom_inbox_debug.wasm  chatroom_room_debug.wasm
backend/golem-temp/generated-base-wit/chatroom_client/: chatroom-client.wit
backend/golem-temp/generated-base-wit/chatroom_inbox/: chatroom-inbox.wit
backend/golem-temp/generated-base-wit/chatroom_room/: chatroom-room.wit
backend/wit/unmanaged/chatroom-common/: types.wit
components-rust/chatroom-inbox/: Cargo.toml  golem.yaml
components-rust/chatroom-room/: Cargo.toml  golem.yaml
components-rust/chatroom-room/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js  utils.js
