[package]
name = "chatroom_room"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[dependencies]
common-lib = { path = "../../common-rust/common-lib" }

golem-rust = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen-rt = { workspace = true }

[package.metadata.component.bindings]

[package.metadata.component.target]
path = "wit-generated"

[package.metadata.component.target.dependencies]
"chatroom:common" = { path = "wit-generated/deps/chatroom-common" }
"wasi:io" = { path = "wit-generated/deps/io" }
"wasi:clocks" = { path = "wit-generated/deps/clocks" }
"golem:rpc" = { path = "wit-generated/deps/wasm-rpc" }
"chatroom:inbox-exports" = { path = "wit-generated/deps/chatroom_inbox-exports" }
"chatroom:inbox-client" = { path = "wit-generated/deps/chatroom_inbox-client" }
"golem:api" = { path = "wit-generated/deps/golem-1.x" }
"chatroom:room-exports" = { path = "wit-generated/deps/chatroom_room-exports" }
# See https://github.com/bytecodealliance/cargo-component/blob/main/src/metadata.rs#L62
#

# derives = ["serde::Serialize", "serde::Deserialize"]
# generate_unused_types = true
